@@ -130,6 +130,7 @@ Jarosław Foksa <jfoksa(at)gmail(dot)com> - pl_PL
 Krzysztof Troska <elleander86(at)gmail(dot)com> - pl_PL
 Alexandre Moreira <alexandream(at)gmail(dot)com> - pt_BR
 Adrovane Marques Kade <adrovane(at)gmail(dot)com> - pt_BR
+Rafael Peregrino da Silva <rperegrino(at)linuxnewmedia(dot)com(dot)br - pt_BR
 Alex Eftimie <alex(at)rosedu(dot)org> - ro
 brahmann_ <brahmann(at)pisem(dot)net> - ru_RU
 Nikita E. Shalaev <nshalaev(at)eu(dot)spb(dot)ru> - ru_RU
